--- a/views/blogs/publish.ejs
+++ b/views/blogs/publish.ejs
@@ -21,7 +21,7 @@
 </head>
 <body>
 <div>
-    <div id="upload-domain" style="display:none"><%= qiniu_domain %>></div>
+    <div id="upload-domain" style="display:none"><%= qiniu_domain %></div>
     <% if(isEdit){ %>
     <div id="blog" style="display:none"><%= id %></div>
     <% } %>
