--- a/public/css/dialog.css
+++ b/public/css/dialog.css
@@ -54,7 +54,8 @@
 
 .dialog-btn-container {
     display: table;
-    line-height: 40px
+    line-height: 40px;
+    width: 100%;
 }
 
 .dialog-btn {
@@ -63,7 +64,7 @@
     padding: 0;
     margin: 0;
     background: cornflowerblue;
-    width: 150px;
+    width: 50%;
     height: 40px;
     font-size: 20px;
 }
