--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -33,7 +33,7 @@
             <div class="form-label">管理账号</div><div class="form-input"><input type="text" id="user"></div>
         </div>
         <div class="form-row">
-            <div class="form-label">管理密码</div><div class="form-input"><input type="text" id="password"></div>
+            <div class="form-label">管理密码</div><div class="form-input"><input type="password" id="password"></div>
         </div>
         <br>
         <input class="btn-finish" type="button" value="设&nbsp;置&nbsp;完&nbsp;成" onclick="finish()">
