--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@ for(var i in tags) {
     <meta name="keywords" content="<%= keywords %>" />
     <meta name="description" content="这是我的个人博客！欢迎光临！" />
 
-    <title>首页</title>
+    <title><%= blog%></title>
     <style type="text/css">
         <%- include ../public/css/common.css%>
         <%- include ../public/css/index.css%>
