--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@ for(var i in tags) {
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords" content="<%= keywords %>" />
     <meta name="description" content="这是我的个人博客！欢迎光临！" />
-
     <title><%= blog%></title>
+    <!--<link rel="icon" href="/favicon.ico">-->
     <style type="text/css">
         <%- include ../public/css/common.css%>
         <%- include ../public/css/index.css%>
