--- a/public/css/common.css
+++ b/public/css/common.css
@@ -39,8 +39,8 @@ textarea{
     background-image: -webkit-gradient(linear,left bottom,left top,color-start(0, #add8e6),color-stop(1, #fefefe));
 }
 
-.top{
+.top-text{
     color: red;
-    font-size: 10px;
+    font-size: 12px;
     font-weight: normal;
 }
