--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -83,6 +83,10 @@
         </select>
         <div class="comment-container"></div>
         <div class="more-blogs-container"><div class="btn-more">加载更多</div></div>
+        <div class="seperator">关于 Bat </div>
+        <div>
+            <a href="https://github.com/1993hzw/bat" target="_blank" style="color: blue">https://github.com/1993hzw/bat</a>
+        </div>
         <br><br>
     </div>
 </div>
