--- a/views/blogs/blog.ejs
+++ b/views/blogs/blog.ejs
@@ -62,7 +62,7 @@
         <div class="blog-details-container">
             <span class="tags" title="标签"><%= tags[tag] %></span>|<span class="blog-time" title="发布时间"><%= time %></span><span class="blog-time" title="阅读量">(<%= visits %>)</span>
         </div>
-        <div class="content-container" ><%- html %></div>
+        <div class="content-container global-text-size" ><%- html %></div>
         <div class="others-container" style="display: block">
             <!-- 代码来自百度分享  http://share.baidu.com/ -->
             <!--<span class="last"> < 上一篇 </span><span class="next">  下一篇 ></span>-->
