--- a/public/css/markdown.css
+++ b/public/css/markdown.css
@@ -10,7 +10,7 @@ a:hover, a:active{ outline: 0; }
 img{max-width:100%;}
 
 pre{
-    line-height: 25px;
+    /*line-height: 28px;*/
 }
 
 /*h1,h2,h3,h4,h5,h6{font-weight:normal;color:#111;line-height:1em;}
@@ -26,14 +26,15 @@ blockquote{color:#666666;margin:0;padding-left: 3em;border-left: 0.5em #EEE soli
 hr { display: block; height: 2px; border: 0; border-top: 1px solid #aaa;border-bottom: 1px solid #eee; margin: 1em 0; padding: 0; }
 pre, code{
     color: #000;
-    font-family:Consolas, "Liberation Mono", Menlo, Courier, monospace;
     /*font-size: 0.94em; /!* 0.94 = 0.88 + (1.00 - 0.88) / 2 *!/*/
     border-radius:3px;
     background-color: #F8F8F8;
     border: 1px solid #CCC;
 }
 /*pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }*/
-pre code { border: 0px !important; background: transparent !important; line-height: 1.3em; }
+pre code { border: 0px !important; background: transparent !important; line-height: 1.3em;
+    /*font-family:Consolas, "Liberation Mono", Menlo, Courier, monospace;*/
+}
 code { padding: 0 3px 0 3px; }
 sub, sup { font-size: 75%; line-height: 0; position: relative; vertical-align: baseline; }
 sup { top: -0.5em; }
