增加了gif图片上传，浏览博客时增加了跳到顶部的按钮

--- a/views/blogs/blog.ejs
+++ b/views/blogs/blog.ejs
@@ -89,6 +89,11 @@
 
     </div>
 
+<div id="topOfBlog">
+    TOP
+</div>
+
+
 <div id="dialog">
     <div class="dialog-bg"></div>
     <div class="dialog-container">
