--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -234,6 +234,30 @@
     background: navajowhite;
 }
 
+#topOfBlog{
+    display: none;
+    filter: alpha(opacity=50);
+    -moz-opacity:0.5;
+    opacity: 0.5;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background: #ddd;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    margin: 0 35px 35px 0;
+    border-radius: 3px;
+    text-align: center;
+    line-height: 35px;
+    font-weight: bold;
+}
+#topOfBlog:hover{
+    filter: alpha(opacity=100);
+    -moz-opacity:1;
+    opacity: 1;
+}
+
 @media(max-width: 800px){
     .logo{
         margin-left: 10px
@@ -243,5 +267,12 @@
     }
     .btn-new{
         margin-right: 10px;
+    }
+    #topOfBlog{
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        font-size: 12px;
+        margin: 0 20px 20px 0;
     }
 }
