--- a/public/css/markdown.css
+++ b/public/css/markdown.css
@@ -29,7 +29,7 @@ pre, code{
     /*font-size: 0.94em; /!* 0.94 = 0.88 + (1.00 - 0.88) / 2 *!/*/
     border-radius:3px;
     background-color: #F8F8F8;
-    border: 1px solid #CCC;
+    border: 1px solid #eee;
 }
 /*pre { white-space: pre; white-space: pre-wrap; word-wrap: break-word; }*/
 pre code { border: 0px !important; background: transparent !important; line-height: 1.3em;
