优化了代码结构，routes中的逻辑处理交由controller，增加了私密日志的功能,编辑文章时可以插入HTML

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -31,7 +31,10 @@ textarea{
     clear: both;
 }
 .bg{
-    border-bottom: 1px solid #eee;
+
+    /*background: #add8e6;*/
+
+    /*border-bottom: 1px solid #eee;*/
     background:-moz-linear-gradient(top,#add8e6,#fefefe);
     background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#add8e6), to(#fefefe));
     filter:  progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#add8e6', endColorstr='#fefefe');
@@ -48,4 +51,10 @@ textarea{
 .global-text-size{
     font-size: 16px;
     line-height: 25px;
+}
+/*圆角*/
+.border-corner{
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
 }
