--- a/views/blog/list.ejs
+++ b/views/blog/list.ejs
@@ -16,7 +16,7 @@
     <div id="cur-tag-id" style="display: none"><%= curTag %></div>
     <div class="topbar-container bg">
         <a href="/" class="logo"><img src="/img/logo.png" style="height: 60px;float: left;border: 0"></a>
-        <div class="btn-list">文章</div>
+        <div class="btn-list border-corner">文章</div>
         <% if(isLogined){ %>
         <a href="/blogs/publish"><div class="btn-new" title="新建文章">+</div></a>
         <% } %>
@@ -43,7 +43,7 @@
             <div class="clearFloat"></div>
         </div>
         <div class="blogs-list-container"></div>
-        <div class="more-blogs-container"><div class="btn-more">点击加载更多</div></div>
+        <div class="more-blogs-container"><div class="btn-more border-corner">点击加载更多</div></div>
     </div>
 </div>
 
