--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,7 +82,7 @@ for(var i in tags) {
                         <div style="font-size: 12px;color: gray"><a class="title" href="/blogs/<%= comments[i].f_blog_id %>"><%=
                             titles[comments[i].f_blog_id] %></a>：
                         </div>
-                        <div class="comment"><%= comments[i].f_content %></div>
+                        <div class="comment"><%= comments[i].f_content.substr(0,80) %></div>
                     </div>
                     <% } %>
                 </div>
