在内存中存储session采用lru策略，优化了记录博客访问量和文章访问量的逻辑,静态文件url加上了前缀public

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -14,10 +14,10 @@
 <body>
 <div>
     <div class="topbar-container bg">
-        <a href="/"><img src="/img/logo.png" class="logo"></a>
+        <a href="/"><img src="/public/img/logo.png" class="logo"></a>
 
         <div class="name">Bat&nbsp;博客系统</div>
-         <img class="btn-logout"  title="注销" src="/img/logout.png" >
+         <img class="btn-logout"  title="注销" src="/public/img/logout.png" >
         <a href="/blogs/publish">
             <div class="btn-new"  title="新建文章">+</div>
         </a>
@@ -112,8 +112,8 @@
     </div>
 </div>
 
-<script src="/js/external/jquery1.3.2.js"></script>
-<script src="/js/external/md5.js"></script>
+<script src="/public/js/external/jquery1.3.2.js"></script>
+<script src="/public/js/external/md5.js"></script>
 <script type="text/javascript">
     <%- include ../../public/js/common.js%>
     <%- include ../../public/js/admin.js%>
