--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -13,7 +13,7 @@
 <body>
 <div>
     <div class="topbar-container bg">
-        <a href="/" ><img src="/img/logo.png" class="logo" ></a>
+        <a href="/" ><img src="/public/img/logo.png" class="logo" ></a>
         <div class="name">Bat&nbsp;博客系统</div>
         <div class="clearFloat"></div>
     </div>
@@ -27,8 +27,8 @@
 
 </div>
 
-<script src="/js/external/jquery1.3.2.js"></script>
-<script src="/js/external/md5.js"></script>
+<script src="/public/js/external/jquery1.3.2.js"></script>
+<script src="/public/js/external/md5.js"></script>
 <script type="text/javascript">
     <%- include ../../public/js/login.js%>
 </script>
