--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -14,7 +14,7 @@
 <div  style="height: 100%;" class="bg">
     <div class="form-container">
         <div style="font-size: 24px;">
-            <img class="logo" src="/img/logo.png">
+            <img class="logo" src="/public/img/logo.png">
             <span style="float: left;padding-top: 18px">&nbsp;Bat&nbsp;博客系统</span>
             <div class="clearFloat"></div>
         </div>
@@ -42,8 +42,8 @@
 
 </div>
 
-<script src="/js/external/jquery1.3.2.js"></script>
-<script src="/js/external/md5.js"></script>
+<script src="/public/js/external/jquery1.3.2.js"></script>
+<script src="/public/js/external/md5.js"></script>
 <script type="text/javascript">
     <%- include ../../public/js/register.js%>
 </script>
