--- a/views/blog/list.ejs
+++ b/views/blog/list.ejs
@@ -15,7 +15,7 @@
 <div>
     <div id="cur-tag-id" style="display: none"><%= curTag %></div>
     <div class="topbar-container bg">
-        <a href="/" class="logo"><img src="/img/logo.png" style="height: 60px;float: left;border: 0"></a>
+        <a href="/" class="logo"><img src="/public/img/logo.png" style="height: 60px;float: left;border: 0"></a>
         <div class="btn-list border-corner">文章</div>
         <% if(isLogined){ %>
         <a href="/blogs/publish"><div class="btn-new" title="新建文章">+</div></a>
@@ -47,7 +47,7 @@
     </div>
 </div>
 
-<script src="/js/external/jquery1.3.2.js"></script>
+<script src="/public/js/external/jquery1.3.2.js"></script>
 <script type="text/javascript">
     <%- include ../../public/js/common.js%>
     <%- include ../../public/js/list.js%>
