--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@ for(var i in tags) {
 <body>
 <div>
     <div class="top-container bg">
-            <img src="/img/logo.png" class="logo">
+            <img src="/public/img/logo.png" class="logo">
             <div class="name"><%= blog %></div>
         <% if(isLogined){ %>
         <a href="/blogs/publish"><div class="btn-new" title="新建文章">+</div></a>
@@ -103,7 +103,7 @@ for(var i in tags) {
 
 </div>
 
-<script src="/js/external/jquery1.3.2.js"></script>
+<script src="/public/js/external/jquery1.3.2.js"></script>
 <script type="text/javascript">
     <%- include ../public/js/index.js%>
 </script>
