--- a/views/blog/blog.ejs
+++ b/views/blog/blog.ejs
@@ -9,20 +9,20 @@
     <meta name="description" content="<%= brief.replace(/\n/g,'。') %>" />
 
     <title><%= title %></title>
-    <link rel="stylesheet" href="/css/highlight/github.css">
+    <link rel="stylesheet" href="/public/css/highlight/github.css">
     <style type="text/css">
         <%- include ../../public/css/common.css%>
         <%- include ../../public/css/markdown.css%>
         <%- include ../../public/css/dialog.css%>
         <%- include ../../public/css/blog.css%>
     </style>
-    <script src="/js/external/jquery1.3.2.js"></script>
+    <script src="/public/js/external/jquery1.3.2.js"></script>
 </head>
 <body>
 <div>
     <div id="blog" style="display:none"><%= id %></div>
     <div class="topbar-container bg">
-        <a href="/" class="logo"><img src="/img/logo.png" style="height: 60px;float: left"></a>
+        <a href="/" class="logo"><img src="/public/img/logo.png" style="height: 60px;float: left"></a>
         <a href="/blogs?tag=<%= tag %>"><div class="btn-list border-corner">文章</div></a>
         <% if(isLogined){ %>
         <a href="/blogs/publish"><div class="btn-new" title="新建文章">+</div></a>
@@ -114,7 +114,7 @@
 
 </div>
 
-<script src="/js/external/highlight.pack.js"></script>
+<script src="/public/js/external/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <script type="text/javascript">
     <%- include ../../public/js/common.js%>
